ajout liens vers recettes/all et recettes/new

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -6,5 +6,6 @@ html
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
     include menu
-    block content
+    main
+      block content
     include footer
