--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -50,25 +50,21 @@ nav > .menu {
 }
 
 nav > .menu > li {
-  float: left;
-  position: relative;
-}
-
-nav > .menu > li > a {
   color: white;
   cursor: pointer;
   display: flex;
+  float: left;
   height: 100%;
   padding: 0 10px;
+  position: relative;
   vertical-align: center;
 }
 
-nav > .menu > li > a:hover {
+nav > .menu > li:hover {
   background-color: #8df;
-  color: #09d;
 }
 
-nav > .menu > li > a:hover > span > ul {
+nav > .menu > li:hover ul {
   display: block;
   position: absolute;
   top: 100%;
@@ -77,7 +73,7 @@ nav > .menu > li > a:hover > span > ul {
   width: 250px;
 }
 
-nav > .menu > li > a:hover > span > ul > li {
+nav > .menu > li:hover ul > li {
   background-color: #8df;
   border: 1px solid white;
   display: inline-block;
@@ -86,7 +82,7 @@ nav > .menu > li > a:hover > span > ul > li {
   width: 100%;
 }
 
-nav > .menu > li > a:hover > span > ul > li:hover {
+nav > .menu > li:hover ul > li:hover {
   background-color: white;
   border: 1px solid #8df;
   border-collapse: collapse;
