tests middlewares & models

--- a/views/recettes/new.jade
+++ b/views/recettes/new.jade
@@ -7,25 +7,13 @@ block content
     ul
       li
         label Nom de la recette
-        input
+        input(value="#{recipe.name}")
       li
         label Date de création
-        input
+        input(value="#{recipe.date}", type="date")
       li
         label Arôme 1
         input
       li
         label Arôme 2
-        input
-      li
-        label
-        input
-      li
-        label
-        input
-      li
-        label
-        input
-      li
-        label
         input
