--- a/views/layout.jade
+++ b/views/layout.jade
@@ -4,6 +4,7 @@ html
     title= title
     link(href='https://fonts.googleapis.com/css?family=Roboto:400,700,400italic,700italic' rel='stylesheet')
     link(rel='stylesheet', href='/stylesheets/style.css')
+    block extend_script
   body
     include menu
     main
