ajout passport + models + debut recettes

--- a/views/aromes/new.jade
+++ b/views/aromes/new.jade
@@ -4,3 +4,21 @@ block extend_script
 block content
 
   h1 #{ title }
+
+  form(method="POST")
+    ul
+      li
+        label(name="marque") Marque
+        input
+      li
+        label(name="nom") Nom
+        input
+      li
+        label(name="description") Description
+        input
+      li
+        label hastags
+        input
+      li
+        label vendeurs
+        input
