--- a/views/users/signup.jade
+++ b/views/users/signup.jade
@@ -11,5 +11,5 @@ block content
     labek Password
     input(type="password", name="password")
     br
-    input(type="submit", value="Login!")
+    input(type="submit", value="Signup!")
     input(type="hidden" name="_csrf" value=csrfToken)
