--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -109,6 +109,57 @@ main {
   padding-top: 80px;
 }
 
+form {
+  display: inline-block;
+}
+
+form ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+form li {
+  margin: 5px 0;
+  position: relative;
+}
+
+form label {
+  display: inline-block;
+  width: 40%;
+}
+
+form label + input {
+  display: inline-block;
+  width: 50%;
+}
+
+.autocomplete {
+  display: none;
+  left: 40%;
+  position: absolute;
+  top: 100%;
+}
+
+.autocomplete > li {
+  background-color: white;
+  border: 1px solid #ccc;
+  border-bottom: none;
+  cursor: pointer;
+  margin: 0;
+  padding: 4px 8px;
+  white-space: nowrap;
+  z-index: 1000;
+}
+
+.autocomplete > li:last-child {
+  border-bottom: 1px solid #ccc;
+}
+
+.autocomplete > li:hover {
+  background-color: #E8F7FF;
+}
+
 footer {
   bottom: 0;
   padding: 10px;
