--- a/views/aromes/new.jade
+++ b/views/aromes/new.jade
@@ -28,4 +28,5 @@ block content
       li
         label vendeurs
         input
+    input(type="hidden" name="_csrf" value=csrfToken)
     input(type="submit" value="Enregistrer")
