basic arômes listing and push

--- a/views/aromes/all.jade
+++ b/views/aromes/all.jade
@@ -7,4 +7,4 @@ block content
   ul.aromes
     each arome in aromes
       li
-        span #{ arome.nom }
+        span #{ arome.marque + ' - ' + arome.nom + ' - ' + arome.description }
