--- a/views/aromes/my.jade
+++ b/views/aromes/my.jade
@@ -1,5 +1,9 @@
 extends ../layout
-
 block content
 
   h1 #{ title }
+
+  ul.aromes
+    each arome in aromes
+      li
+        span #{ arome.marque + ' - ' + arome.nom + ' - ' + arome.description }
