--- a/views/recettes/new.jade
+++ b/views/recettes/new.jade
@@ -21,5 +21,5 @@ block content
         label Tags
         input(name="tags", placeholder="#custard #2diy4")
 
-    input(type="submit", value="Enregistrer cette recette.")
+    input(type="submit", value="Enregistrer")
     input(type="hidden" name="_csrf" value=csrfToken)
