--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -8,6 +8,10 @@ a {
   color: #00B7FF;
 }
 
+h1 {
+  color: #09d;
+}
+
 input {
   font-size: 15px;
   padding: 4px 8px;
@@ -179,13 +183,16 @@ footer {
   width: 100%;
 }
 
-.recettes li {
-  border: 1px solid #09d;
-  border-radius: 5px;
+.recettes {
   display: inline-block;
-  list-style: none;
-  margin: 0;
-  padding: 30px;
+  padding: 0;
 }
 
-.recettes li  {}
+.recettes > li {
+  border: 1px solid #09d;
+  border-radius: 5px;
+  display: flex;
+  list-style: none;
+  margin: 20px auto;
+  padding: 20px;
+}
