--- a/views/index.jade
+++ b/views/index.jade
@@ -1,5 +1,13 @@
 extends layout
 
 block content
-  h1= title
-  p Welcome to #{title}
+  .jumbo
+    img(src="http://res.cloudinary.com/eveetalex/image/upload/c_scale,w_1141/v1465578526/recipes/static/jumbo.jpg")
+
+  br
+  br
+
+  h1.center Bienvenue sur Recipes
+
+  p.center
+    |Le site pour stocker vos recettes de D.I.Y.
