--- a/views/users/signup.jade
+++ b/views/users/signup.jade
@@ -7,8 +7,8 @@ block content
   form(method="POST")
     ul
       li
-        label User
-        input(name="email")
+        label Pseudo
+        input(name="pseudo")
       li
         label Password
         input(type="password", name="password")
