styling recette-new + splitting css for dev

--- a/views/menu.jade
+++ b/views/menu.jade
@@ -2,8 +2,9 @@ nav
   span.brand-icon
     a(href="/") Recipes
   span.search-bar
-    label(for="search-bar") Search
+    label(for="search-bar", placeholder="#custard, Strawberry, Fraise, Gourmand...") Search
     input(name="search-bar" type="text")
+    input(type="submit", value="GO")
   ul.menu
     li
       span Recettes
