--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,125 +1,5 @@
-body {
-  font: 15px "Roboto" !important;
-  margin: 0;
-  overflow-x: hidden;
-  padding: 0;
-}
-
-a {
-  color: #00B7FF;
-}
-
-h1 {
-  color: #09d;
-}
-
-input {
-  font-size: 15px;
-  padding: 4px 8px;
-}
-
-input[type="submit"] {
-  border: none;
-  background-color: #09f;
-  color: white;
-  font-weight: bold;
-  padding: 10px 20px;
-}
-
-nav {
-  background-color: #09d;
-  color: white;
-  display: flex;
-  font-size: 20px;
-  font-weight: bold;
-  height: 60px;
-  margin: 0;
-  position: fixed;
-  top: 0;
-  width: 100%;
-}
-
-nav * {
-  margin: auto;
-}
-
-nav a {
-  color: white !important;
-  text-decoration: none;
-}
-
-.brand-icon {
-  font-size: 35px;
-  margin-left: 20px;
-}
-
-.search-bar > label {
-  margin-right: 10px;
-}
-
-nav > .menu {
-  height: 100%;
-  list-style: none;
-}
-
-nav > .menu > li {
-  color: white;
-  cursor: pointer;
-  display: flex;
-  float: left;
-  height: 100%;
-  padding: 0 10px;
-  position: relative;
-  vertical-align: center;
-}
-
-nav > .menu > li:hover {
-  background-color: #8df;
-}
-
-nav > .menu > li:hover ul {
-  display: block;
-  position: absolute;
-  top: 100%;
-  left: 0;
-  padding: 0;
-  width: 250px;
-}
-
-nav > .menu > li:hover ul > li {
-  padding: 0;
-}
-
-nav > .menu > li:hover ul > li > a {
-  background-color: #8df;
-  border: 1px solid white;
-  display: inline-block;
-  font-size: 18px;
-  padding: 4px 8px;
-  width: 100%;
-}
-
-nav > .menu > li:hover ul > li:hover > a {
-  background-color: white;
-  border: 1px solid #8df;
-  color: #8df !important;
-}
-
-
-nav > .menu > li {
-  display: flex;
-  height: 100%;
-}
-
-nav > .menu ul {
-  display: none;
-  list-style: none;
-}
-
-main {
-  height: 100%;
-  padding: 20px;
-  padding-top: 80px;
+* {
+  box-sizing: border-box !important; 
 }
 
 form {
@@ -133,30 +13,60 @@ form ul {
   padding: 0;
 }
 
-form li {
-  margin: 5px 0;
-  position: relative;
+a {
+  color: #00B7FF;
 }
 
-form label {
+h1 {
+  color: #09d;
+}
+
+.padded-right {
+  padding-right: 20px;
+}
+.col-10 {
   display: inline-block;
-  border-bottom: 1px solid #bbb;
-  margin-bottom: 10px;
-  padding-bottom: 4px;
-  width: 180px;
+  width: 10%;
 }
-
-form label + input {
+.col-20 {
+  display: inline-block;
+  width: 20%;
+}
+.col-30 {
+  display: inline-block;
+  width: 30%;
+}
+.col-40 {
+  display: inline-block;
+  width: 40%;
+}
+.col-50 {
   display: inline-block;
   width: 50%;
 }
-
-footer {
-  bottom: 0;
-  padding: 10px;
-  position: fixed;
-  text-align: center;
+.col-60 {
+  display: inline-block;
+  width: 60%;
+}
+.col-70 {
+  display: inline-block;
+  width: 70%;
+}
+.col-80 {
+  display: inline-block;
+  width: 80%;
+}
+.col-90 {
+  display: inline-block;
+  width: 90%;
+}
+.col-100 {
+  display: inline-block;
   width: 100%;
+}
+
+.inline-block {
+  display: inline-block;
 }
 
 .center {
@@ -170,6 +80,49 @@ footer {
 }
 
 .jumbo > img {
+  width: 100%;
+}
+
+input, textarea {
+  font-size: 15px;
+  padding: 4px 8px;
+}
+
+textarea {
+  margin-bottom: -10px;
+  margin-top: 5px;
+  border-width: 1px;
+}
+
+input[type="submit"] {
+  border: none;
+  background-color: #09f;
+  color: white;
+  font-weight: bold;
+  font-size: 1.3em;
+  margin-top: 25px;
+  padding: 10px 20px;
+}
+
+form li {
+  margin: 5px 0;
+  position: relative;
+}
+
+form label {
+  border-bottom: 1px solid #bbb;
+  margin-bottom: 10px;
+  padding-bottom: 4px;
+  text-align: right;
+}
+
+footer {
+  background-color: #47535F;
+  bottom: 0;
+  color: white;
+  padding: 8px;
+  position: fixed;
+  text-align: center;
   width: 100%;
 }
 
@@ -198,27 +151,30 @@ footer {
   background-color: #E8F7FF;
 }
 
+.title {
+  color: #09d;
+}
+
 .recettes {
   display: inline-block;
   padding: 0;
 }
 
 .recettes > li {
-  border: 1px solid #09d;
   border-radius: 5px;
+  background: white;
   display: inline-block;
   list-style: none;
   margin: 10px;
-  padding: 20px;
+  padding: 4px;
+  box-shadow: 1px 2px 4px 2px rgba(0, 0, 0, 0.2);
 }
 
-.recette label {
-  border-bottom: 1px solid #ccc;
-  display: inline-block;
-  margin: 10px 10px 0 10px;
-  padding: 4px;
-  text-decoration: italic;
-  width: 160px;
+.recette-container {
+  background-color: white;
+  border-radius: 5px;
+  height: 100%;
+  padding: 15px;
 }
 
 .tags {
