--- a/views/layout.jade
+++ b/views/layout.jade
@@ -3,8 +3,9 @@ html
   head
     title= title
     link(href='https://fonts.googleapis.com/css?family=Roboto:400,700,400italic,700italic' rel='stylesheet')
+    link(rel='stylesheet', href='/stylesheets/layout.css')
     link(rel='stylesheet', href='/stylesheets/style.css')
-    block extend_script
+    block extend_head
   body
     include menu
     main
