--- a/views/index.jade
+++ b/views/index.jade
@@ -9,5 +9,14 @@ block content
 
   h1.center Bienvenue sur Recipes
 
-  p.center
-    |Le site pour stocker vos recettes de D.I.Y.
+  p.center Le site pour stocker vos recettes de D.I.Y.
+
+  p.center  Enregistrez vos propres recettes et choisissez de les partager avec le reste de la communauté !
+
+  p.center  Forkez les recettes des autres membres dans votre profil pour en faire vos propores versions.
+
+  p.center  Marquez les arômes que vous possédez et regardez quelles recettes y sont associées.
+
+  p.center 
+    a.login(href='/users/signup') S'enregistrer
+    a.login(href='/users/login') Se connecter
