--- a/views/menu.jade
+++ b/views/menu.jade
@@ -24,15 +24,15 @@ nav
             a(href="/aromes/new") Nouvel arôme
           li
             a(href="/aromes/my") Mes arômes
-    li
-      span Groupes
-        ul
-          li
-            a(href="/groupes/all") Tous les groupes
-          li
-            a(href="/groupes/new") Nouveau groupe
-          li
-            a(href="/groupes/my") Mes groupes
+    //- li
+    //-   span Groupes
+    //-     ul
+    //-       li
+    //-         a(href="/groupes/all") Tous les groupes
+    //-       li
+    //-         a(href="/groupes/new") Nouveau groupe
+    //-       li
+    //-         a(href="/groupes/my") Mes groupes
 
     li
       span Profil
