--- a/views/users/profile.jade
+++ b/views/users/profile.jade
@@ -2,6 +2,20 @@ extends ../layout
 
 block content
 
-  h1 #{ title }
+  h1 Bienvenue #{ user.local.pseudo }
 
-  span Welcome #{ user.local.pseudo }
+  div Login
+  div Email
+  div Mon avatar
+  hr
+  div Mon activité
+  div Nombre de recettes postées
+  div Nombre de recettes suivies
+  div Nombre d'arômes dans ma besace
+  hr
+  div Mon statut dans la communauté
+  div Nombre de followers
+  div Likes reçus
+  div Dislikes reçus
+  div Likes donnés
+  div Dislikes donnés
