--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -2,11 +2,6 @@
   box-sizing: border-box !important; 
 }
 
-form {
-  display: inline-block;
-  min-width: 50%;
-}
-
 form ul {
   list-style: none;
   margin: 0;
@@ -83,7 +78,7 @@ h1 {
   width: 100%;
 }
 
-input, textarea {
+input, textarea, select {
   font-size: 15px;
   padding: 4px 8px;
 }
@@ -98,22 +93,22 @@ input[type="submit"] {
   border: none;
   background-color: #09f;
   color: white;
+  cursor: pointer;
   font-weight: bold;
   font-size: 1.3em;
   margin-top: 25px;
   padding: 10px 20px;
 }
 
-form li {
-  margin: 5px 0;
-  position: relative;
-}
-
-form label {
-  border-bottom: 1px solid #bbb;
-  margin-bottom: 10px;
-  padding-bottom: 4px;
-  text-align: right;
+input[type="submit"]:hover {
+  border: none;
+  background-color: #0af;
+  color: white;
+  cursor: pointer;
+  font-weight: bold;
+  font-size: 1.3em;
+  margin-top: 25px;
+  padding: 10px 20px;
 }
 
 footer {
