--- a/views/recettes/new.jade
+++ b/views/recettes/new.jade
@@ -37,7 +37,7 @@ block content
     div
       .title.center
         b Bases
-      ul
+      ul.recette-bases
         li
           .col-10
             label Base 1
@@ -45,7 +45,7 @@ block content
             .col-10.padded-right
               span.short-label Ratio PG / VG
             .col-10
-              select(name="base1-ratio", required)
+              select(name="base-ratio", required)
                 - var i = 0
                 while i < 11
                   option(value= i*10 + '/' + (10-i)*10) #{ i*10 + '/' + (10-i)*10 }
@@ -53,41 +53,57 @@ block content
             .col-10.padded-right
               span.short-label Taux de Nicotine
             .col-10
-              input(name="base1-nicotine", type="number", required, min="0", max="100")
+              input.nicotine(name="base-nicotine", type="number", required, min="0", max="100")
             .col-10
               span mg
             .col-10
-              input(name="arome1-pourcentage", type="number", placeholder="Pourcentage", required, min="0", max="100")
+              input.pourcentage(name="base-pourcentage", type="number", placeholder="Pourcentage", required, min="0", max="100")
             .col-10
               span %
             .col-30
               .col-50.padded-right
-                input#btn-supprimer-base(type="button", value="Supprimer")
+                input.btn-supprimer(type="button", value="Supprimer")
               .col-50.padded-right
-                input#btn-ajouter-base(type="button", value="Ajouter une base")
+                input.btn-ajouter(type="button", value="Ajouter une base")
     br
     div
       .title.center
         b Arômes
-      ul
+      ul.recette-aromes
         li
           .col-10
             label Arôme 1
           .col-90.arome-container
             .col-20.padded-right
-              input(name="arome1-marque", type="text", placeholder="Marque / Fabricant", required)
-            .col-40.padded-right
-              input(name="arome1-nom", type="text", placeholder="Nom", required)
-            .col-10.padded-right
-              .col-90
-                input(name="arome1-pourcentage", type="number", placeholder="Pourcentage", required, min="0", max="100")
-              .col-10
-                span %
+              input(name="arome-marque", type="text", placeholder="Marque / Fabricant", required)
+            .col-30.padded-right
+              input(name="arome-nom", type="text", placeholder="Nom", required)
+            .col-10
+                input.pourcentage(name="arome-pourcentage", type="number", placeholder="Pourcentage", required, min="0", max="100")
+            .col-10
+              span %
             .col-30
               .col-50.padded-right
-                input#btn-supprimer-arome(type="button", value="Supprimer")
+                input.btn-supprimer(type="button", value="Supprimer")
               .col-50.padded-right
-                input#btn-ajouter-arome(type="button", value="Ajouter un arôme")                  
+                input.btn-ajouter(type="button", value="Ajouter un arôme")
+    br
+    div
+      .title.center
+        b Total
+      ul
+        li
+          .col-10
+            label Total
+          .col-90.arome-container
+            .col-30 &nbsp;
+            .col-10.center
+              span#total-nicotine 0
+            .col-10 mg
+            .col-10.center
+              span#total-pourcentage 0
+            .col-10 %
+
     div
       input(type="submit", value="Enregistrer")
       input(type="hidden" name="_csrf" value=csrfToken)
