--- a/views/recettes/new.jade
+++ b/views/recettes/new.jade
@@ -32,7 +32,7 @@ block content
           .col-10
             label Tags
           .col-90
-            input(name="tags", placeholder="#custard #2diy4")
+            input(name="hashtags", placeholder="#custard #2diy4")
     br
     div
       .title.center
